# RAG-LLM

./: main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb
